# MHCPrime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 01_inference_quickstart.ipynb
scripts/: train_mhcprime_base.py
src/mhcprime/: __init__.py  checkpointing.py  cli.py  conformer_block.py  datasets.py  features.py  ffnn_and_activations.py  inference.py  losses.py  metrics.py  model.py  model_utils.py  plotting.py  predictor.py  preprocessing.py  ranking.py  samplers.py  segment_embedder.py  sequence_embedders.py  training.py  transformer_layer.py  utils.py
src/mhcprime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mhcprime/data/: mhc_pseudo_seqs.py  mhcprime_global_background_scores.npz  processed_feature_table.csv
tests/: test_checkpointing.py  test_inference_output.py  test_package_resources.py  test_preprocessing.py  test_samplers.py
