[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhcprime"
version = "0.1.0"
description = "MHCPrime peptide-MHC class I prediction model"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Prathamesh Chati"}
]

dependencies = [
    "torch>=2.0,<2.7",
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<2.2.3",
    "scikit-learn>=1.2,<1.7",
    "scipy>=1.9,<1.14",
    "tqdm>=4.64",
    "transformers>=4.30,<4.58",
    "peptides",
    "matplotlib>=3.7,<3.10",
    "pyparsing>=3.0,<3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "black",
    "build",
    "twine",
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mhcprime = [
    "data/*.txt",
    "data/*.py",
    "data/*.csv",
    "data/*.csv.gz",
    "data/*.json",
    "data/*.npz",
    "checkpoints/**/*.pt"
]

[project.scripts]
mhcprime-predict = "mhcprime.cli:main"